@@ -9,6 +9,8 @@
 ** bam now has method="fREML" option which uses faster REML optimizer: 
    can make a big difference on parameter rich models.
 
+* magic can now deal with model matrices with more columns than rows.
+
 * p-value reference distribution approximations improved.
 
 * bam returns objects of class "bam" inheriting from "gam"
